--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 <body>
     <h1>Hello world</h1>
     <p>Hello Sof</p>
+    <section class="a">
+
+    </section>
+    <section class="b">
+        
+    </section>
 </body>
 </html>
