--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <h1>Hello world</h1>
     <p>Hello Sof</p>
     <section class="a">
-
+        <ul>
+            <li>Hey There</li>
+            <li>See you</li>
+        </ul>
     </section>
     <section class="b">
         
