--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul>
             <li>Hey There</li>
             <li>See you</li>
+            <li>Goodbye</li>
         </ul>
     </section>
     <section class="b">
