--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Test</title>
 </head>
 <body>
+    <section class="premios">
 
+    </section>
+    <section class="regras">
+
+    </section>
+    <footer>
+        
+    </footer>
 </body>
 </html>
