Sections HTML Sof

--- a/index.html
+++ b/index.html
@@ -8,13 +8,28 @@
 </head>
 <body>
     <section class="premios">
-
+        <div class="wrapper">
+            <h2>Ganhaste</h2>
+            <h3>10 cravas</h3>
+            <div class="flex-container">
+                <img src="https://images.unsplash.com/photo-1601001435957-74f0958a93fb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=80" alt="">
+                <img src="https://images.unsplash.com/photo-1601001435957-74f0958a93fb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=80" alt="">
+                <img src="https://images.unsplash.com/photo-1601001435957-74f0958a93fb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=80" alt="">
+                <img src="https://images.unsplash.com/photo-1601001435957-74f0958a93fb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=80" alt="">
+            </div>
+        </div>
     </section>
     <section class="regras">
-
+        <div class="wrapper">
+            <h3>Regras</h3>
+            <ul>
+                <li><span>1</span> Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
+                <li><span>2</span> Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
+                <li><span>3</span> Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
+            </ul>
+        </div>
     </section>
     <footer>
-        
     </footer>
 </body>
 </html>
