Section labels Sof

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     </section>
     <!--END FORM-->
 
+    <!-- GIFTS -->
     <section class="premios">
         <div class="wrapper">
             <h2>Ganhaste</h2>
@@ -81,6 +82,9 @@
             </div>
         </div>
     </section>
+    <!-- END GIFTS -->
+
+    <!-- RULES -->
     <section class="regras">
         <div class="wrapper">
             <h3>Regras</h3>
@@ -91,8 +95,11 @@
             </ul>
         </div>
     </section>
+    <!-- END RULES -->
+
+    <!-- FOOTER -->
     <footer>
     </footer>
+    <!-- END FOOTER -->
 </body>
-
 </html>
