--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="...">
+                <img src="https://www.farmavazquez.pt/65477-thickbox_default/halls-original-32-g.jpg">
             </div>
         </nav>
     </header>
     <!--END HEADER-->
 
-    <!--FORM-->
-    <section>
+    <!--HERO-->
+    <section class="hero">
         <div class="wrapper">
             <form>
                 <label for="code">Insere o Código</label>
@@ -29,7 +29,7 @@
             </form>
         </div>
     </section>
-    <!--END FORM-->
+    <!--END HERO-->
 
     <section class="premios">
         <div class="wrapper">
