--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <section class="premios">
         <div class="wrapper">
             <h2>Ganhaste</h2>
-            <h3>10 cravas</h3>
+            <h3><span>10</span><br>cravas</h3>
             <div class="flex-container">
                 <img src="https://images.unsplash.com/photo-1601001435957-74f0958a93fb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=80"
                     alt="">
