Add gifts, rules & footer Sof

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
         <div class="wrapper">
             <h3>Regras</h3>
             <ul>
-                <li><span>1</span> Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
-                <li><span>2</span> Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
-                <li><span>3</span> Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
+                <li><span>1</span>  Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
+                <li><span>2</span>  Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
+                <li><span>3</span>  Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
             </ul>
         </div>
     </section>
@@ -99,6 +99,7 @@
 
     <!-- FOOTER -->
     <footer>
+        <p>FOOTER</p>
     </footer>
     <!-- END FOOTER -->
 </body>
