--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="https://www.farmavazquez.pt/65477-thickbox_default/halls-original-32-g.jpg">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRcNltMUhhTXIIO_FLQqLV1-ux6bGa9Pir9zQ&usqp=CAU">
             </div>
         </nav>
     </header>
@@ -57,7 +57,7 @@
     <section class="hero">
         <div class="wrapper">
             <form>
-                <label for="code">Insere o Código</label>
+                <label for="code">INSERE O CÓDIGO</label>
                 <input type="text" id="code" name="code">
                 <input type="submit" value="OK" class="btn">
             </form>
