Add font Azo Sans Sof

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <!--Links-->
     <link rel="stylesheet" href="style/css/main.css">
-    <link rel="stylesheet" type="text/css" href="style/css/font.css">
+    <link rel="stylesheet" type="text/css" href="font/AzoSans/stylesheet.css">
 </head>
 
 <body>
