--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
     <!-- RULES -->
     <section class="regras">
         <div class="wrapper">
-
             <h3>Regras</h3>
             <ul>
                 <li><span>1</span>  Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
@@ -79,8 +78,55 @@
     <!-- END RULES -->
     <!--END HERO-->
 
-    <!-- GIFTS -->
-    <section class="premios">
+    <!-- ABOUT -->
+    <section class="about">
+        <div class="wrapper">
+            <h2>Entra no Mundo Crava</h2>
+            <p>Phasellus sit amet fringilla risus. Nam elementum auctor lectus sit amet imperdiet.Aenean aliquet efficitur tellus, sit amet efficitur nisi consectetur ut. Sed non nunc id metus interdum rutrum non ut dui.</p>
+            <div class="flex-container frst">
+                <div class="shape">
+                    <img src="img/photo-1580518380430-2f84c0a7fb85.jpg" alt="">
+                </div>
+                <div class="info">
+                    <h3>Influencers</h3>
+                    <p>Nam elementum auctor lectus sit amet imperdiet. Aenean aliquet efficitur tellus, sit amet efficitur nisi consectetur ut.</p>
+                </div>
+            </div>
+            <div class="flex-container">
+                <div class="info">
+                    <h3>Desafios</h3>
+                    <p>Nam elementum auctor lectus sit amet imperdiet. Aenean aliquet efficitur tellus, sit amet efficitur nisi consectetur ut.</p>
+                </div>
+                <div class="shape">
+                    <img src="img/photo-1598134493100-03df093ad7a8.jpg" alt="">
+                </div>
+            </div>
+            <div class="flex-container">
+                <div class="shape">
+                    <img src="img/photo-1626285870869-6e3271105f05.jpg" alt="">
+                </div>
+                <div class="info">
+                    <h3>Top Cravas</h3>
+                    <p>Nam elementum auctor lectus sit amet imperdiet. Aenean aliquet efficitur tellus, sit amet efficitur nisi consectetur ut.</p>
+                </div>
+            </div>
+            <a class="btn-default" href="#">Mundo Crava</a>
+        </div>
+    </section>
+    <!-- END ABOUT -->
+
+    <!-- FOOTER -->
+    <footer>
+        <p>FOOTER</p>
+    </footer>
+    <!-- END FOOTER -->
+
+</body>
+</html>
+
+
+<!-- GIFTS -->
+    <!-- <section class="premios">
         <div class="wrapper">
             <h2>Ganhaste</h2>
             <h3><span>10</span><br>cravas</h3>
@@ -95,14 +141,5 @@
                     alt="">
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- END GIFTS -->
-
-    <!-- FOOTER -->
-    <footer>
-        <p>FOOTER</p>
-    </footer>
-    <!-- END FOOTER -->
-    
-</body>
-</html>
