--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>HALLS</title>
@@ -48,35 +49,33 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRcNltMUhhTXIIO_FLQqLV1-ux6bGa9Pir9zQ&usqp=CAU">
+                <img
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRcNltMUhhTXIIO_FLQqLV1-ux6bGa9Pir9zQ&usqp=CAU">
             </div>
         </nav>
     </header>
     <!--END HEADER-->
 
-    <!--HERO-->
+    <!-- HERO -->
     <section class="hero">
         <div class="wrapper">
+            <div>
+                <h3>Troca os teus cravas por prémios...</h3>
+            </div>
+            <ul class="rules">
+                <li>
+                    <div class='square'></div>
+                    <span>1</span> Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
+                <li><span>2</span> Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
+                <li><span>3</span> Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
+            </ul>
             <form>
-                <label for="code">INSERE O CÓDIGO</label>
-                <input type="text" id="code" name="code">
-                <input type="submit" value="OK" class="btn">
+                <label for="code">Insere o teu código e vê o que podes ganhar!</label>
+                <input type="text" id="code" name="code" placeholder="x - x - x - x - x">
+                <input type="submit" value="-" class="btn">
             </form>
         </div>
     </section>
-    <!-- RULES -->
-    <section class="regras">
-        <div class="wrapper">
-
-            <h3>Regras</h3>
-            <ul>
-                <li><span>1</span>  Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
-                <li><span>2</span>  Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
-                <li><span>3</span>  Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
-            </ul>
-        </div>
-    </section>
-    <!-- END RULES -->
     <!--END HERO-->
 
     <!-- GIFTS -->
@@ -103,6 +102,7 @@
         <p>FOOTER</p>
     </footer>
     <!-- END FOOTER -->
-    
+
 </body>
+
 </html>
