Add row-rev Sof

--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
                     <p>Nam elementum auctor lectus sit amet imperdiet. Aenean aliquet efficitur tellus, sit amet efficitur nisi consectetur ut.</p>
                 </div>
             </div>
-            <div class="flex-container">
+            <div class="flex-container rev">
+                <div class="shape">
+                    <img src="img/photo-1598134493100-03df093ad7a8.jpg" alt="">
+                </div>
                 <div class="info">
                     <h3>Desafios</h3>
                     <p>Nam elementum auctor lectus sit amet imperdiet. Aenean aliquet efficitur tellus, sit amet efficitur nisi consectetur ut.</p>
-                </div>
-                <div class="shape">
-                    <img src="img/photo-1598134493100-03df093ad7a8.jpg" alt="">
                 </div>
             </div>
             <div class="flex-container">
