Update about & footer Sof

--- a/index.html
+++ b/index.html
@@ -117,29 +117,20 @@
 
     <!-- FOOTER -->
     <footer>
-        <p>FOOTER</p>
+            <div class="flex-container">
+                <div>
+                    <ul>
+                        <li>Políticas de Privacidade</li>
+                        <li>Outras Burocracias</li>
+                    </ul>
+                    <h4>Mapa do Site - Páginas que existem dentro do micro site</h4>
+                </div>
+                <div>
+                    <p>Icons redes sociais</p>
+                </div>
+            </div>
     </footer>
     <!-- END FOOTER -->
 
 </body>
 </html>
-
-
-<!-- GIFTS -->
-    <!-- <section class="premios">
-        <div class="wrapper">
-            <h2>Ganhaste</h2>
-            <h3><span>10</span><br>cravas</h3>
-            <div class="flex-container">
-                <img src="https://images.unsplash.com/photo-1601001435957-74f0958a93fb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=80"
-                    alt="">
-                <img src="https://images.unsplash.com/photo-1601001435957-74f0958a93fb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=80"
-                    alt="">
-                <img src="https://images.unsplash.com/photo-1601001435957-74f0958a93fb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=80"
-                    alt="">
-                <img src="https://images.unsplash.com/photo-1601001435957-74f0958a93fb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=80"
-                    alt="">
-            </div>
-        </div>
-    </section> -->
-    <!-- END GIFTS -->
