About mobile Sof

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <!-- FOOTER -->
     <footer>
-            <div class="flex-container">
+            <div class="flex-container wrapper">
                 <div>
                     <ul>
                         <li>Políticas de Privacidade</li>
