Update mundocrava html Sof

--- a/mundocrava.html
+++ b/mundocrava.html
@@ -53,8 +53,30 @@
         </nav>
     </header>
     <!--END HEADER-->
+    <section class="top">
+        <h1>O Mundo Crava</h1>
+        <h2>Top Cravas</h2>
+        <div class="flex-container">
+            <div>
+                <img src="" alt="">
+            </div>
+            <div>
+                <img src="" alt="">
+            </div>
+            <div>
+                <img src="" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="challenge">
+        <h2>Desafia-te</h2>
 
-    
+    </section>
+    <section class="influencers">
+        <h2>Crava os teus Influencers</h2>
+        <p>Curabitur finibus, magna in pharetra faucibus, lacus urna mattis nulla, ut facilisis felis erat sit amet neque.</p>
+    </section>
+
     <!-- FOOTER -->
     <!-- <footer>
             <div class="flex-container wrapper">
