--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <p>Nam elementum auctor lectus sit amet imperdiet. Aenean aliquet efficitur tellus, sit amet efficitur nisi consectetur ut.</p>
                 </div>
             </div>
-            <a class="btn-default" href="#">Mundo Crava</a>
+            <a class="btn-default" href="/mundocrava.html">Mundo Crava</a>
         </div>
     </section>
     <!-- END ABOUT -->
