--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <nav>
             <div class="logo">
                 <img
-                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRcNltMUhhTXIIO_FLQqLV1-ux6bGa9Pir9zQ&usqp=CAU">
+                    src="https://github.com/sofiarnunes/Halls-360Project/blob/main/img/halls-logo.png?raw=true">
             </div>
         </nav>
     </header>
@@ -84,8 +84,8 @@
             </div>
             <form>
                 <label for="code">Insere o teu código e vê o que podes ganhar!</label>
-                <input type="text" id="code" name="code" placeholder="x - x - x - x - x">
-                <input type="submit" value="-" class="btn">
+                <input type="text" id="code" name="code" placeholder="x x x x x" style="border:none">
+                <input type="submit" value="-" class="btn" style="border:none">
             </form>
     </section>
     <!--END HERO-->
