--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <h4>Mapa do Site - Páginas que existem dentro do micro site</h4>
                 </div>
                 <div>
-                    <p>Icons redes sociais</p>
+                    <p>Icons de redes sociais</p>
                 </div>
             </div>
     </footer>
