--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 
 <body>
-    <!--HEADER-->
+    <!--HEADER--
     <header>
         <nav>
             <div class="logo">
@@ -58,33 +58,36 @@
     <!-- HERO -->
     <section class="hero">
         <div class="wrapper">
-            <div>
-                <h3>Troca os teus cravas por prémios...</h3>
-            </div>
             <div class="rules">
                 <div class="rules-01">
                     <div class='square'>
-                        <div class='number'>1</div>
+                        <div class='number'>
+                            <h1>1</h1>
+                        </div>
                     </div>
-                    <p>Compra um Halls.</p>
+                    <p>Compra um Halls</p>
                 </div>
                 <div class="rules-01">
                     <div class='square'>
-                        <div class='number'>2</div>
+                        <div class='number'>
+                            <h1>2</h1>
+                        </div>
                     </div>
-                    <p>Insere o código para ganhar Cravas.</p>
+                    <p>Insere o código para ganhar Cravas</p>
                 </div>
                 <div class="rules-01">
                     <div class='square'>
-                        <div class='number'>3</div>
+                        <div class='number'>
+                            <h1>3</h1>
+                        </div>
                     </div>
-                    <p>Troca Cravas por prémios.</p>
+                    <p>Troca Cravas por prémios</p>
                 </div>
             </div>
             <form>
-                <label for="code">Insere o teu código e vê o que podes ganhar!</label>
-                <input type="text" id="code" name="code" placeholder="x x x x x" style="border:none">
-                <input type="submit" value="-" class="btn" style="border:none">
+                <label for="code">Insere aqui o código</label>
+                <input type="text" id="code" name="code" placeholder="X X X X" style="border:none">
+                <input type="submit" value="OK" class="btn" style="border:none">
             </form>
     </section>
     <!--END HERO-->
