Add gift & update about Sof

--- a/index.html
+++ b/index.html
@@ -90,9 +90,41 @@
                 <input type="submit" value="OK" class="btn" style="border:none">
             </form>
     </section>
-    <!--END HERO-->
+    <!-- END HERO -->
 
-    <!-- ABOUT -->z
+    <!-- GIFTS -->
+    <section class="gifts">
+        <div class="wrapper">
+            <h2>Parabéns!</h2>
+            <h3>Ganhaste 100 Cravas!</h3>
+            <div class="flex-container">
+                <div class="square">
+                    <div>
+                        <img src="https://www.seekpng.com/png/full/807-8074871_t-shirt-png-free-download-green-polo-shirt.png" alt="">
+                    </div>
+                </div>
+                <div class="square">
+                    <div>
+                        <img src="https://www.seekpng.com/png/full/807-8074871_t-shirt-png-free-download-green-polo-shirt.png" alt="">
+                    </div>
+                </div>
+                <div class="square">
+                    <div>
+                        <img src="https://www.seekpng.com/png/full/807-8074871_t-shirt-png-free-download-green-polo-shirt.png" alt="">
+                    </div>
+                </div>
+                <div class="square">
+                    <div>
+                        <img src="https://www.seekpng.com/png/full/807-8074871_t-shirt-png-free-download-green-polo-shirt.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <p>... ou torna-te um Cravas Profissional e pede à Halls o que sempre sonhaste!</p>
+        </div>
+    </section>
+    <!-- END GIFTS -->
+
+    <!-- ABOUT -->
     <section class="about">
         <div class="wrapper">
             <h2>Entra no Mundo Crava</h2>
@@ -155,23 +187,3 @@
 
 </html>
 
-
-<!-- GIFTS -->
-<!-- <section class="premios">
-        <div class="wrapper">
-            <h2>Ganhaste</h2>
-            <h3><span>10</span><br>cravas</h3>
-            <div class="flex-container">
-                <img src="https://images.unsplash.com/photo-1601001435957-74f0958a93fb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=80"
-                    alt="">
-                <img src="https://images.unsplash.com/photo-1601001435957-74f0958a93fb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=80"
-                    alt="">
-                <img src="https://images.unsplash.com/photo-1601001435957-74f0958a93fb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=80"
-                    alt="">
-                <img src="https://images.unsplash.com/photo-1601001435957-74f0958a93fb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=80"
-                    alt="">
-            </div>
-        </div>
-<<<<<<< HEAD
-    </section>
-    <!-- END GIFTS -->
