--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
     <!--favicon-->
 
     <!-- Icon -->
-
-    <!--Font-->
-
+    <script src="https://kit.fontawesome.com/819c470758.js" crossorigin="anonymous"></script>
     <!--Links-->
     <link rel="stylesheet" href="style/css/main.css">
     <link rel="stylesheet" type="text/css" href="font/AzoSans/stylesheet.css">
@@ -170,14 +168,18 @@
     <footer>
         <div class="flex-container wrapper">
             <div>
-                <ul>
-                    <li>Políticas de Privacidade</li>
-                    <li>Outras Burocracias</li>
+                <ul class="flex-container">
+                    <a href="#"><li><img src="/img/HALLS_logo.png" alt=""></li></a>
+                    <a href="#"><li>Política de cookies</li></a>
+                    <a href="#"><li>Política de privacidade</li></a>
+                    <a href="#"><li>Termos e condições</li></a>
+                    <a href="#"><li>Contacto</li></a>
+                    <a href="#"><li>Mapa do site</li></a>
                 </ul>
-                <h4>Mapa do Site - Páginas que existem dentro do micro site</h4>
             </div>
             <div>
-                <p>Icons de redes sociais</p>
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
     </footer>
