--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     <!--Links-->
     <link rel="stylesheet" href="style/css/main.css">
     <link rel="stylesheet" type="text/css" href="font/AzoSans/stylesheet.css">
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/main.js"></script>
 </head>
 
 <body>
@@ -85,7 +87,7 @@
             <form>
                 <label for="code">Insere aqui o código</label>
                 <input type="text" id="code" name="code" placeholder="X X X X" style="border:none">
-                <input type="submit" value="OK" class="btn" style="border:none">
+                <input type="submit" id="submit" value="OK" class="btn" style="border:none">
             </form>
     </section>
     <!-- END HERO -->
