Change prize sec & update Sof

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <link rel="stylesheet" href="style/css/main.css">
     <link rel="stylesheet" type="text/css" href="font/AzoSans/stylesheet.css">
     <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/new.js"></script>
 </head>
 
 <body>
@@ -53,7 +53,7 @@
             </div>
         </nav>
     </header>
-    <!--END HEADER-->
+    END HEADER-->
 
     <!-- HERO -->
     <section class="hero">
@@ -93,42 +93,68 @@
     <!-- END HERO -->
 
     <!-- GIFTS -->
-    <section class="gifts">
+    <section class="prize">
+        <div class="wrapper">
+            <div class="flex-container">
+                <div class="prizes">
+                    <img class="top" src="/img/t-shirt.png" alt="">
+                    <img class="right" src="/img/saco-web.png" alt="">
+                    <img class="bottom" src="/img/caneca-web.png" alt="">
+                    <img class="left" src="/img/caderno-web.png" alt="">
+                </div>
+                <div><h3>ou</h3></div>
+                <div class="professional">
+                    <img src="/img/coroa.png" alt="">
+                </div>
+            </div>
+            <div class="flex-container">
+                <div class="text-1">
+                    <p>Escolhe já o teu prémio ou...</p>
+                </div>
+                <div class="text-2">
+                    <p>...torna-te um Cravas Profissional e pede à Halls o que sempre sonhaste!</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- <section class="gifts">
         <div class="wrapper">
             <h2>Parabéns!</h2>
             <h3>Ganhaste 100 Cravas!</h3>
             <div class="flex-container">
                 <div class="square">
-                    <div>
+                    <div class="dim">
                         <img src="https://www.seekpng.com/png/full/807-8074871_t-shirt-png-free-download-green-polo-shirt.png" alt="">
                     </div>
                 </div>
                 <div class="square">
-                    <div>
+                    <div class="dim">
                         <img src="https://www.seekpng.com/png/full/807-8074871_t-shirt-png-free-download-green-polo-shirt.png" alt="">
                     </div>
                 </div>
                 <div class="square">
-                    <div>
+                    <div class="dim">
                         <img src="https://www.seekpng.com/png/full/807-8074871_t-shirt-png-free-download-green-polo-shirt.png" alt="">
                     </div>
                 </div>
                 <div class="square">
-                    <div>
+                    <div class="dim">
                         <img src="https://www.seekpng.com/png/full/807-8074871_t-shirt-png-free-download-green-polo-shirt.png" alt="">
                     </div>
                 </div>
             </div>
             <p>... ou torna-te um Cravas Profissional e pede à Halls o que sempre sonhaste!</p>
         </div>
-    </section>
+    </section> -->
     <!-- END GIFTS -->
 
     <!-- ABOUT -->
     <section class="about">
         <div class="wrapper">
             <h2>Entra no Mundo Crava</h2>
-            <p>Phasellus sit amet fringilla risus. Nam elementum auctor lectus sit amet imperdiet.Aenean aliquet
+            <p class="sub">Phasellus sit amet fringilla risus. Nam elementum auctor lectus sit amet imperdiet.Aenean aliquet
                 efficitur tellus, sit amet efficitur nisi consectetur ut. Sed non nunc id metus interdum rutrum non ut
                 dui.</p>
             <div class="flex-container frst">
@@ -145,7 +171,7 @@
                 <div class="shape">
                     <img src="img/photo-1598134493100-03df093ad7a8.jpg" alt="">
                 </div>
-                <div class="info">
+                <div class="info right">
                     <h3>Desafios</h3>
                     <p>Nam elementum auctor lectus sit amet imperdiet. Aenean aliquet efficitur tellus, sit amet
                         efficitur nisi consectetur ut.</p>
@@ -166,6 +192,38 @@
     </section>
     <!-- END ABOUT -->
 
+    <!-- FOOTER -->
+    <!-- <footer>
+        <div class="flex-container wrapper">
+            <div>
+                <ul class="flex-container">
+                    <a href="#">
+                        <li><img src="/img/HALLS_logo.png" alt=""></li>
+                    </a>
+                    <a href="#">
+                        <li>Política de cookies</li>
+                    </a>
+                    <a href="#">
+                        <li>Política de privacidade</li>
+                    </a>
+                    <a href="#">
+                        <li>Termos e condições</li>
+                    </a>
+                    <a href="#">
+                        <li>Contacto</li>
+                    </a>
+                    <a href="#">
+                        <li>Mapa do site</li>
+                    </a>
+                </ul>
+            </div>
+            <div>
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
+    </footer> -->
+    <!-- END FOOTER -->
     <!-- FOOTER -->
     <footer>
         <div class="flex-container wrapper">
