--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>
             <div class="flex-container">
                 <div class="text-1">
-                    <p>Escolhe já o teu prémio ou...</p>
+                    <p>Escolhe já o teu prémio ou......</p>
                 </div>
                 <div class="text-2">
                     <p>...torna-te um Cravas Profissional e pede à Halls o que sempre sonhaste!</p>
