Add announc & update Sof

--- a/index.html
+++ b/index.html
@@ -92,7 +92,24 @@
     </section>
     <!-- END HERO -->
 
-    <!-- GIFTS -->
+    <!-- ANNOUNCEMENT -->
+    <section class="announcement">
+        <div class="wrapper">
+            <div class="win">
+                <h3>Yeah!!!</h3>
+                <h4>Ganhaste</h4>
+            </div>
+            <div class="cravas">
+                <img src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/20_Group.png" alt="">
+            </div>
+            <div class="arrow">
+                <a href="#"><i class="fas fa-chevron-down"></i></a>
+            </div>
+    </div>
+    </section>
+    <!-- END ANNOUNCEMENT -->
+
+    <!-- PRIZES -->
     <section class="prize">
         <div class="wrapper">
             <div class="flex-container">
@@ -109,46 +126,17 @@
             </div>
             <div class="flex-container">
                 <div class="text-1">
-                    <p>Escolhe já o teu prémio ou......</p>
+                    <p>Escolhe já o teu prémio...</p>
                 </div>
                 <div class="text-2">
-                    <p>...torna-te um Cravas Profissional e pede à Halls o que sempre sonhaste!</p>
+                    <p>...torna-te um <span>Cravas Profissional</span> e 
+                        acumula os teus cravas para prémios de sonho</p>
                 </div>
             </div>
 
         </div>
     </section>
-
-    <!-- <section class="gifts">
-        <div class="wrapper">
-            <h2>Parabéns!</h2>
-            <h3>Ganhaste 100 Cravas!</h3>
-            <div class="flex-container">
-                <div class="square">
-                    <div class="dim">
-                        <img src="https://www.seekpng.com/png/full/807-8074871_t-shirt-png-free-download-green-polo-shirt.png" alt="">
-                    </div>
-                </div>
-                <div class="square">
-                    <div class="dim">
-                        <img src="https://www.seekpng.com/png/full/807-8074871_t-shirt-png-free-download-green-polo-shirt.png" alt="">
-                    </div>
-                </div>
-                <div class="square">
-                    <div class="dim">
-                        <img src="https://www.seekpng.com/png/full/807-8074871_t-shirt-png-free-download-green-polo-shirt.png" alt="">
-                    </div>
-                </div>
-                <div class="square">
-                    <div class="dim">
-                        <img src="https://www.seekpng.com/png/full/807-8074871_t-shirt-png-free-download-green-polo-shirt.png" alt="">
-                    </div>
-                </div>
-            </div>
-            <p>... ou torna-te um Cravas Profissional e pede à Halls o que sempre sonhaste!</p>
-        </div>
-    </section> -->
-    <!-- END GIFTS -->
+    <!-- END PRIZES -->
 
     <!-- ABOUT -->
     <section class="about">
