--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
                 <img src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/20_Group.png" alt="">
             </div>
             <div class="arrow">
-                <a href="#"><i class="fas fa-chevron-down"></i></a>
+                <a href="#prize"><i class="fas fa-chevron-down"></i></a>
             </div>
     </div>
     </section>
     <!-- END ANNOUNCEMENT -->
 
     <!-- PRIZES -->
-    <section class="prize">
+    <section class="prize" id="prize">
         <div class="wrapper">
             <div class="flex-container">
                 <div class="prizes">
