--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <section class="prize" id="prize">
         <div class="wrapper">
             <div class="text-mobile">
-                <p>Escolhe já o teu prémio imediato...</p>
+                <p>Escolhe já o teu prémio imediato....</p>
             </div>
             <div class="flex-container">
                 <div class="prizes">
@@ -219,7 +219,7 @@
     </footer> -->
     <!-- END FOOTER -->
     <!-- FOOTER -->
-    <footer>
+    <!-- <footer>
         <div class="logo-mobile">
             <img src="/img/HALLS_logo.png" alt="">
         </div>
@@ -239,7 +239,7 @@
                 <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <!-- END FOOTER -->
 
 </body>
