--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     <link rel="stylesheet" href="style/css/main.css">
     <link rel="stylesheet" type="text/css" href="font/AzoSans/stylesheet.css">
     <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/new.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/arrow_click.js"></script>
 </head>
 
 <body>
@@ -100,10 +101,10 @@
                 <h4>Ganhaste</h4>
             </div>
             <div class="cravas">
-                <img src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/20_Group.png" alt="">
+                <img src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/20_Group.png" alt="" id="win-20">
             </div>
             <div class="arrow">
-                <a href="#prize"><i class="fas fa-chevron-down"></i></a>
+                <a href="#prize" id="arrow"><i class="fas fa-chevron-down"></i></a>
             </div>
     </div>
     </section>
