--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     </footer> -->
     <!-- END FOOTER -->
     <!-- FOOTER -->
-    <!-- <footer>
+    <footer>
         <div class="logo-mobile">
             <img src="/img/HALLS_logo.png" alt="">
         </div>
@@ -243,7 +243,7 @@
                 <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
-    </footer> -->
+    </footer>
     <!-- END FOOTER -->
 
 </body>
