--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
             </div>
             <div class="flex-container">
                 <div class="prizes">
-                    <a href="#"><img class="top" src="/img/t-shirt.png" alt=""></a>
-                    <a href="#"><img class="right" src="/img/saco-web.png" alt=""></a>
-                    <a href="#"><img class="bottom" src="/img/caneca-web.png" alt=""></a>
-                    <a href="#"><img class="left" src="/img/caderno-web.png" alt=""></a>
+                    <a href="#"><img class="top" src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/t-shirt.png" alt=""></a>
+                    <a href="#"><img class="right" src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/saco-web.png" alt=""></a>
+                    <a href="#"><img class="bottom" src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/caneca-web.png" alt=""></a>
+                    <a href="#"><img class="left" src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/caderno-web.png" alt=""></a>
                 </div>
                 <div>
                     <h3>ou</h3>
