--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 </div>
             </div>
             <div class="mundo">
-                <p>Leva-me <br>para este mundo...</p>
+                <p>Leva-me para este mundo...</p>
                 <a class="btn" href="/mundocrava.html">Mundo Crava</a>
             </div>
         </div>
