--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <h3>ou</h3>
                 </div>
                 <div class="professional">
-                    <img src="/img/coroa.png" alt="">
+                    <a href="#"><img src="/img/coroa.png" alt=""></a>
                 </div>
             </div>
             <div class="flex-container">
@@ -148,18 +148,14 @@
     <section class="about">
         <div class="wrapper">
             <h2>Entra no Mundo Crava</h2>
-            <p class="sub">Phasellus sit amet fringilla risus. Nam elementum auctor lectus sit amet imperdiet.Aenean
-                aliquet
-                efficitur tellus, sit amet efficitur nisi consectetur ut. Sed non nunc id metus interdum rutrum non ut
-                dui.</p>
+            <p class="sub">Descobre um mundo de oportunidades para ti que és um verdadeiro crava!</p>
             <div class="flex-container frst">
                 <div class="shape">
                     <img src="img/photo-1580518380430-2f84c0a7fb85.jpg" alt="">
                 </div>
                 <div class="info">
                     <h3>Influencers</h3>
-                    <p>Nam elementum auctor lectus sit amet imperdiet. Aenean aliquet efficitur tellus, sit amet
-                        efficitur nisi consectetur ut.</p>
+                    <p>Testa as tuas skills crava com os teus influencers favoritos! Um jantar, uma viagem ou tenta a tua sorte com o pedido mais fora da caixa.</p>
                 </div>
             </div>
             <div class="flex-container rev">
@@ -168,8 +164,7 @@
                 </div>
                 <div class="info right">
                     <h3>Desafios</h3>
-                    <p>Nam elementum auctor lectus sit amet imperdiet. Aenean aliquet efficitur tellus, sit amet
-                        efficitur nisi consectetur ut.</p>
+                    <p>Para além de cravas, alinhas em tudo? <br>Vê os desafios que temos para ti!</p>
                 </div>
             </div>
             <div class="flex-container">
@@ -178,8 +173,7 @@
                 </div>
                 <div class="info">
                     <h3>Top Cravas</h3>
-                    <p>Nam elementum auctor lectus sit amet imperdiet. Aenean aliquet efficitur tellus, sit amet
-                        efficitur nisi consectetur ut.</p>
+                    <p>Já és um crava de alta patente? <br>Dá um check se estás no top dos tops.</p>
                 </div>
             </div>
             <div class="mundo">
