Update Logo Sof

--- a/index.html
+++ b/index.html
@@ -219,12 +219,12 @@
     <!-- FOOTER -->
     <footer>
         <div class="logo-mobile">
-            <img src="/img/HALLS_logo.png" alt="">
+            <img src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/HALLS_logo.png" alt="">
         </div>
         <div class="flex-container wrapper">
             <div>
                 <ul class="flex-container">
-                    <a href="#" class="logo"><li><img src="/img/HALLS_logo.png" alt=""></li></a>
+                    <a href="#" class="logo"><li><img src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/HALLS_logo.png" alt=""></li></a>
                     <a href="#"><li>Política de cookies</li></a>
                     <a href="#"><li>Política de privacidade</li></a>
                     <a href="#"><li>Termos e condições</li></a>
