--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <p class="sub">Descobre um mundo de oportunidades para ti que és um verdadeiro crava!</p>
             <div class="flex-container frst">
                 <div class="shape">
-                    <img src="img/photo-1580518380430-2f84c0a7fb85.jpg" alt="">
+                    <img src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/img-1.png" alt="">
                 </div>
                 <div class="info">
                     <h3>Influencers</h3>
@@ -160,7 +160,7 @@
             </div>
             <div class="flex-container rev">
                 <div class="shape">
-                    <img src="img/photo-1598134493100-03df093ad7a8.jpg" alt="">
+                    <img src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/img-2.png" alt="">
                 </div>
                 <div class="info right">
                     <h3>Desafios</h3>
@@ -169,7 +169,7 @@
             </div>
             <div class="flex-container">
                 <div class="shape">
-                    <img src="img/photo-1626285870869-6e3271105f05.jpg" alt="">
+                    <img src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/img-3.png" alt="">
                 </div>
                 <div class="info">
                     <h3>Top Cravas</h3>
