Add login js Sof

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/arrow_click.js"></script>
+    <script src="js/login-show.js"></script>
 </head>
 
 <body>
@@ -139,7 +140,10 @@
                         acumula os teus cravas para prémios de sonho</p>
                 </div>
             </div>
-            <a href="#" class="btn">QUERO SER CRAVA PROFISSIONAL</a>
+            <a href="#" class="btn" id="btn-cravas">QUERO SER CRAVA PROFISSIONAL</a>
+            <div id="login">
+                <img src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/login-bg.png" alt="">
+            </div>
         </div>
     </section>
     <!-- END PRIZES -->
