--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                 <div>
                     <h3>ou</h3>
                 </div>
-                <div class="professional">
-                    <a href="#"><img src="/img/coroa.png" alt=""></a>
+                <div class="professional" id="btn-cravas">
+                    <a href="#"><img src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/coroa.png" alt=""></a>
                 </div>
             </div>
             <div class="flex-container">
