--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div>
                     <h3>ou</h3>
                 </div>
-                <div class="professional" id="btn-cravas">
+                <div class="professional" id="image-cravas">
                     <a href="#"><img src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/coroa.png" alt=""></a>
                 </div>
             </div>
