--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
     <link rel="stylesheet" type="text/css" href="font/AzoSans/stylesheet.css">
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/arrow_click.js"></script>
     <script src="js/login-show.js"></script>
 </head>
 
@@ -105,7 +104,7 @@
                 <img src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/20_Group.png" alt="" id="win-20">
             </div>
             <div class="arrow">
-                <a href="#prize" id="arrow"><i class="fas fa-chevron-down"></i></a>
+                <a href="#" id="arrow"><i class="fas fa-chevron-down"></i></a>
             </div>
         </div>
     </section>
