--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <img src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/20_Group.png" alt="" id="win-20">
             </div>
             <div class="arrow">
-                <a href="#" id="arrow"><i class="fas fa-chevron-down"></i></a>
+                <i class="fas fa-chevron-down"></i>
             </div>
         </div>
     </section>
