--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>HALLS</title>
     <!--Generic meta-->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale = 1.0, shrink-to-fit=no, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <meta name="author" content="" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
