--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
             </div>
             <a href="#" class="btn" id="btn-cravas">QUERO SER CRAVA PROFISSIONAL</a>
             <div id="login">
+                <i class="fas fa-times" id="exit"></i>
                 <img src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/login-bg.png" alt="">
             </div>
         </div>
