--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <link rel="stylesheet" type="text/css" href="font/AzoSans/stylesheet.css">
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/uppercase.js"></script>
     <script src="js/login-show.js"></script>
 </head>
 
