--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         acumula os teus cravas para prémios de sonho</p>
                 </div>
             </div>
-            <a href="#" class="btn" id="btn-cravas">QUERO SER CRAVA PROFISSIONAL</a>
+            <div class="btn-cravas"><a href="#" class="btn" id="btn-cravas">QUERO SER CRAVA PROFISSIONAL</a></div>
             <div id="login">
                 <i class="fas fa-times" id="exit"></i>
                 <img src="https://raw.githubusercontent.com/sofiarnunes/Halls-360Project/main/img/login-bg.png" alt="">
